fix: attempt to minimize iOS flicker on scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,8 @@ main {
     overflow-x: hidden;
     overflow-y: auto;
     scroll-snap-type: y mandatory;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
 
 
